--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,14 @@
-cmake_minimum_required(VERSION 3.10)
-
 project(EarchProtectiveShield)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-find_package(SDL2 REQUIRED)
-
-include_directories(${SDL2_INCLUDE_DIRS})
+cmake_minimum_required(VERSION 3.10)
 
 add_executable(EarchProtectiveShield main.cpp)
 
+find_package(SDL2 REQUIRED)
+include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
 target_link_libraries(EarchProtectiveShield ${SDL2_LIBRARIES})
+
+find_package(SDL2_image REQUIRED)
+include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
+target_link_libraries(EarchProtectiveShield ${SDL2_IMAGE_LIBRARIES})
