--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 cmake_minimum_required(VERSION 3.10)
 
-add_executable(EarchProtectiveShield src/main.cpp src/Game/Game.cpp)
+add_executable(EarchProtectiveShield src/main.cpp src/Game/Game.cpp src/Entity/Entity.cpp src/Player/Player.cpp)
 
 find_package(SDL2 REQUIRED)
 include_directories(${SDL2_INCLUDE_DIRS} ${SDL2IMAGE_INCLUDE_DIRS})
